--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
       </fieldset>
     </form>
     <div>
-      <a href="">About</a>
-      <a href="./pages/fav.html">Favorites</a>
-
+      <a href="/pages/about.html">About</a>
+      <a href="/pages/fav.html">Favorites</a>
     </div>
   </header>
   <main>
