--- a/pages/search.html
+++ b/pages/search.html
@@ -28,7 +28,10 @@
         <button aria-label="검색"></button>
       </fieldset>
     </form>
-    <a href="">About</a>
+    <div>
+      <a href="/pages/about.html">About</a>
+      <a href="/pages/fav.html">Favorites</a>
+    </div>
   </header>
   <main>
     <div class="visual"></div>
