--- a/pages/about.html
+++ b/pages/about.html
@@ -48,6 +48,7 @@
         </div>
         <div class="video">
           <div data-title="Project">
+            <video src="../images/project.mp4" muted loop></video>
             <div class="info">
               Since 2000<br>
               Project
@@ -55,6 +56,7 @@
             <div class="count"><span>450<i>++</i></span>프로젝트 진행</div>
           </div>
           <div data-title="Inspire">
+            <video src="../images/youtube.mp4" muted loop></video>
             <div class="info">
               Since 2016<br>
               Inspire
@@ -62,6 +64,7 @@
             <div class="count"><span>790<i>++</i></span>유튜브 영상</div>
           </div>
           <div data-title="Educate">
+            <video src="../images/educate.mp4" muted loop></video>
             <div class="info">
               Since 2009<br>
               Educate
