--- a/pages/about.html
+++ b/pages/about.html
@@ -53,7 +53,7 @@
               Since 2000<br>
               Project
             </div>
-            <div class="count"><span>450<i>++</i></span>프로젝트 진행</div>
+            <div class="count"><span><i>++</i>450</span>프로젝트 진행</div>
           </div>
           <div data-title="Educate">
             <video src="../images/educate.mp4" muted loop></video>
@@ -61,7 +61,7 @@
               Since 2009<br>
               Educate
             </div>
-            <div class="count"><span>100<i>++</i></span>강의 진행</div>
+            <div class="count"><span><i>++</i>100</span>강의 진행</div>
           </div>
           <div data-title="Inspire">
             <video src="../images/youtube.mp4" muted loop></video>
@@ -69,7 +69,7 @@
               Since 2016<br>
               Inspire
             </div>
-            <div class="count"><span>790<i>++</i></span>유튜브 영상</div>
+            <div class="count"><span><i>++</i>790</span>유튜브 영상</div>
           </div>
         </div>
       </div>
@@ -85,46 +85,73 @@
       <div class="about-site">
         <div>
           <div class="top">
-            <div class="left"></div>
-            <div class="right"></div>
+            <div class="left">
+              Search your favorite movie<br>
+              Keep your favorite movies
+            </div>
+            <div class="right">
+              사용자가 손쉽게 영화를 검색하고 상세 정보를 확인할 수 있도록 설계되었습니다.<br>
+              "최신 영화, 인기 영화, 그리고 추천작을 손쉽게 찾아보세요."
+            </div>
           </div>
           <div class="btm">
             <div class="left">
-              <img src="../images/rebehayan_profile.png" alt="리베하얀">
+              <div class="list">
+                <div>
+                  <h3>주요 기능</h3>
+                  <ul>
+                    <li><strong>검색 기능 </strong>: 원하는 영화를 검색</li>
+                    <li><strong>상세 정보 제공 </strong>: 줄거리, 감독, 배우 등 영화 데이터 제공</li>
+                    <li><strong>즐겨찾기 </strong>: 세션스토리지를 활용한 즐겨찾기</li>
+                  </ul>
+                </div>
+                <div>
+                  <h3>개발자</h3>
+                  <ul>
+                    <li><strong>닉네임</strong>: 리베하얀</li>
+                    <li><strong>전문 분야</strong>: 웹퍼블리싱 및 프론트엔드 개발</li>
+                    <li><strong>특 징</strong>: 25년 경력의 웹 퍼블리셔</li>
+                  </ul>
+                </div>
+                <div>
+                  <h3>강의</h3>
+                  <ul>
+                    <li>JavaScript 기반의 영화 사이트 제작 강의</li>
+                    <li>실무 활용도를 높이는 프로젝트 중심 강의</li>
+                    <li>직관적이고 사용하기 쉬운 Figma, Notion 강의 자료 제공</li>
+                  </ul>
+                </div>
+                <div>
+                  <h3>기술 스택</h3>
+                  <div class="item-group">
+                    <div class="item">HTML</div>
+                    <div class="item">CSS</div>
+                    <div class="item">JavaScript</div>
+                    <div class="item">OMDB API</div>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="right">
-              <p>
-                이 사이트는 사용자가 손쉽게 영화를 검색하고 상세 정보를 확인할 수 있도록 설계되었습니다.<br>
-                "최신 영화, 인기 영화, 그리고 추천작을 손쉽게 찾아보세요."
-              </p>
-              <h3>주요 기능</h3>
-              <ul>
-                <li>검색 기능 : 원하는 영화를 검색</li>
-                <li>상세 정보 제공 : 줄거리, 감독, 배우 등 영화 데이터 제공</li>
-                <li>즐겨찾기 : 세션스토리지를 활용한 즐겨찾기</li>
-              </ul>
-              <h3>개발자</h3>
-              <ul>
-                <li>닉네임: 립의 하얀</li>
-                <li>전문 분야: 웹퍼블리싱 및 프론트엔드 개발</li>
-                <li>특징: 23년 경력의 웹 퍼블리셔</li>
-              </ul>
-              <h3>강의</h3>
-              <ul>
-                <li>JavaScript 기반의 영화 사이트 제작 강의</li>
-                <li>실무 활용도를 높이는 프로젝트 중심 강의</li>
-                <li>직관적이고 사용하기 쉬운 강의 자료 제공</li>
-              </ul>
-              <h3>기술 스택</h3>
-              <div class="item-group">
-                <div class="item">HTML</div>
-                <div class="item">CSS</div>
-                <div class="item">JavaScript</div>
-                <div class="item">OMDB API</div>
-              </div>
+              <img src="../images/rebehayan_profile.png" alt="리베하얀">
             </div>
           </div>
         </div>
+      </div>
+      <div class="history">
+        <h2 class="mxauto">Patch Notes</h2>
+        <ul class="patch-notes-list">
+          <li>
+            <div class="version">v1.0.0</div>
+            <div class="date">2025-01-28</div>
+            <ul class="discription">
+              <li>사이트 초기 버전 릴리스</li>
+              <li>검색 기능 구현: 영화 제목으로 검색 가능</li>
+              <li>상세 페이지 구현: 줄거리, 감독, 배우 정보 표시</li>
+              <li>즐겨찾기 기능 추가: 세션 스토리지를 이용한 즐겨찾기 저장</li>
+            </ul>
+          </li>
+        </ul>
       </div>
     </div>
   </main>
