--- a/pages/fav.html
+++ b/pages/fav.html
@@ -1,41 +1,72 @@
 <!DOCTYPE html>
 <html lang="ko-KR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="영화검색사이트트" />
+    <title>SearchMovies</title>
+    <meta property="og:type" content="responsive, web, mobile" />
+    <meta property="og:site_name" content="SearchMovies" />
+    <meta property="og:title" content="first page" />
+    <meta property="og:description" content="You can search for movies." />
+    <meta property="og:image" content="페이지 대표이미지" />
+    <meta property="og:url" content="movie-js-nine.vercel.app/" />
+    <link rel="stylesheet" href="../css/index.css" />
+    <script type="module" src="../js/index.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="영화검색사이트트" />
-  <title>SearchMovies</title>
-  <meta property="og:type" content="responsive, web, mobile" />
-  <meta property="og:site_name" content="SearchMovies" />
-  <meta property="og:title" content="first page" />
-  <meta property="og:description" content="You can search for movies." />
-  <meta property="og:image" content="페이지 대표이미지" />
-  <meta property="og:url" content="movie-js-nine.vercel.app/" />
-  <link rel="stylesheet" href="../css/index.css" />
-  <script type="module" src="../js/index.js"></script>
-</head>
+  <body>
+    <header class="header">
+      <h1 class="logo">
+        <a href="/"><img src="../images/logo.svg" alt="" /></a>
+      </h1>
+      <form class="search">
+        <fieldset>
+          <legend>영화검색</legend>
+          <input type="search" placeholder="What do you want to watch?" />
+          <button aria-label="검색"></button>
+        </fieldset>
+      </form>
+      <div>
+        <a href="/pages/about.html">About</a>
+        <a href="/pages/fav.html">Favorites</a>
+      </div>
+    </header>
+    <main>
+      <div class="test"><img src="" alt="" /></div>
+      <ul class="my-fav-list search-result"></ul>
+    </main>
+    <script>
+      const tmdb = async () => {
+        const options = {
+          method: "GET",
+          headers: {
+            accept: "application/json",
+            Authorization: "Bearer eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiJlMDgzZjA4NGZlYjFmMzQyZmUzYTcxZmU1ZDQzMTgyZiIsIm5iZiI6MTcwNDE3NzQ4OS40LCJzdWIiOiI2NTkzYWY1MWZjMzFkMzcxNTA0NmRhYjAiLCJzY29wZXMiOlsiYXBpX3JlYWQiXSwidmVyc2lvbiI6MX0.xKBbcPqAWJP5u4ydfMvb5hTt3N8ZzeR1vM7616B6Ng0",
+          },
+        };
 
-<body>
-  <header class="header">
-    <h1 class="logo">
-      <a href="/"><img src="../images/logo.svg" alt="" /></a>
-    </h1>
-    <form class="search">
-      <fieldset>
-        <legend>영화검색</legend>
-        <input type="search" placeholder="What do you want to watch?" />
-        <button aria-label="검색"></button>
-      </fieldset>
-    </form>
-    <div>
-      <a href="/pages/about.html">About</a>
-      <a href="/pages/fav.html">Favorites</a>
-    </div>
-  </header>
-  <main>
-    <ul class="my-fav-list search-result"></ul>
-  </main>
-</body>
+        try {
+          const response = await fetch("https://api.themoviedb.org/3/movie/900901/images", options);
 
+          if (!response.ok) {
+            throw new Error(`HTTP error! Status: ${response.status}`);
+          }
+
+          const data = await response.json();
+
+          // 응답 데이터 확인
+          console.log("API Response:", data);
+          return data;
+        } catch (err) {
+          console.error("Error fetching TMDB API:", err);
+        }
+      };
+      tmdb().then((data) => {
+        console.log(data.posters[0].file_path);
+
+        document.querySelector(".test img").setAttribute("src", `https://image.tmdb.org/t/p/w500${data.posters[0].file_path}`);
+      });
+    </script>
+  </body>
 </html>
