fix:include header

--- a/pages/search.html
+++ b/pages/search.html
@@ -17,22 +17,7 @@
 </head>
 
 <body>
-  <header class="header">
-    <h1 class="logo">
-      <a href="/"><img src="../images/logo.svg" alt="" /></a>
-    </h1>
-    <form class="search">
-      <fieldset>
-        <legend>영화검색</legend>
-        <input type="search" placeholder="What do you want to watch?" />
-        <button aria-label="검색"></button>
-      </fieldset>
-    </form>
-    <div>
-      <a href="/pages/about.html">About</a>
-      <a href="/pages/fav.html">Favorites</a>
-    </div>
-  </header>
+  <header class="header"></header>
   <main>
     <div class="visual"></div>
     <div class="result-text">
