--- a/pages/detail.html
+++ b/pages/detail.html
@@ -18,6 +18,7 @@
 
 <body>
   <header class="header"></header>
+  <dialog id="megamenu"></dialog>
   <main>
     <div class="detail-wrap">
       <button class="btn-prev" aria-label="Previous Page"></button>
