--- a/pages/fav.html
+++ b/pages/fav.html
@@ -18,6 +18,7 @@
 
 <body>
   <header class="header"></header>
+  <dialog id="megamenu"></dialog>
   <main>
     <ul class="my-fav-list search-result"></ul>
   </main>
