--- a/pages/search.html
+++ b/pages/search.html
@@ -18,6 +18,7 @@
 
 <body>
   <header class="header"></header>
+  <dialog id="megamenu"></dialog>
   <main>
     <div class="visual"></div>
     <div class="result-text">
