--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <body>
   <header class="header"></header>
+  <dialog id="megamenu"></dialog>
   <main>
     <div class="swiper main-slide">
       <div class="swiper-wrapper">
