--- a/pages/detail.html
+++ b/pages/detail.html
@@ -1,34 +1,29 @@
 <!DOCTYPE html>
-<html lang="ko-KR">
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="This is a movie details page." />
+    <title>Movie Detail</title>
+    <meta property="og:type" content="responsive, web, mobile" />
+    <meta property="og:site_name" content="SearchMovies" />
+    <meta property="og:title" content="first page" />
+    <meta property="og:description" content="You can search for movies." />
+    <meta property="og:image" content="페이지 대표이미지" />
+    <meta property="og:url" content="movie-js-nine.vercel.app/" />
+    <link rel="stylesheet" href="../css/index.css" />
+    <script type="module" src="../js/index.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="영화상세보기" />
-  <title>영화상세보기</title>
-  <meta property="og:type" content="페이지유형" />
-  <meta property="og:site_name" content="사이트의 이름" />
-  <meta property="og:title" content="페이지 이름" />
-  <meta property="og:description" content="페이지 설명" />
-  <meta property="og:image" content="페이지 대표이미지" />
-  <meta property="og:url" content="페이지 주소" />
-  <link rel="stylesheet" href="../css/index.css" />
-  <script type="module" src="../js/index.js"></script>
-</head>
-
-<body>
-  <header class="header"></header>
-  <dialog id="megamenu"></dialog>
-  <main>
-    <div class="detail-wrap">
-      <button class="btn-prev" aria-label="Previous Page"></button>
-      <div class="movie-detail"></div>
-    </div>
-
-  </main>
-  <footer class="footer">
-    @2025 Rebehayan.com All Right Reserves
-  </footer>
-</body>
-
+  <body>
+    <header class="header"></header>
+    <dialog id="megamenu"></dialog>
+    <main>
+      <div class="detail-wrap">
+        <button class="btn-prev" aria-label="Previous Page"></button>
+        <div class="movie-detail"></div>
+      </div>
+    </main>
+    <footer class="footer">@2025 Rebehayan.com All Right Reserves</footer>
+  </body>
 </html>
