--- a/pages/fav.html
+++ b/pages/fav.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
-<html lang="ko-KR">
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Movie Favorites page." />
+    <title>My Favorites</title>
+    <meta property="og:type" content="responsive, web, mobile" />
+    <meta property="og:site_name" content="SearchMovies" />
+    <meta property="og:title" content="first page" />
+    <meta property="og:description" content="You can search for movies." />
+    <meta property="og:image" content="페이지 대표이미지" />
+    <meta property="og:url" content="movie-js-nine.vercel.app/" />
+    <link rel="stylesheet" href="../css/index.css" />
+    <script type="module" src="../js/index.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="영화검색사이트트" />
-  <title>SearchMovies</title>
-  <meta property="og:type" content="responsive, web, mobile" />
-  <meta property="og:site_name" content="SearchMovies" />
-  <meta property="og:title" content="first page" />
-  <meta property="og:description" content="You can search for movies." />
-  <meta property="og:image" content="페이지 대표이미지" />
-  <meta property="og:url" content="movie-js-nine.vercel.app/" />
-  <link rel="stylesheet" href="../css/index.css" />
-  <script type="module" src="../js/index.js"></script>
-</head>
-
-<body>
-  <header class="header"></header>
-  <dialog id="megamenu"></dialog>
-  <main>
-    <ul class="my-fav-list search-result"></ul>
-  </main>
-</body>
-
+  <body>
+    <header class="header"></header>
+    <dialog id="megamenu"></dialog>
+    <main>
+      <section class="my-fav">
+        <h2 class="heading base">My Favorites</h2>
+        <ul class="my-fav-list search-result"></ul>
+      </section>
+    </main>
+  </body>
 </html>
