--- a/pages/fav.html
+++ b/pages/fav.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="영화검색사이트트" />
+  <meta name="description" content="영화검색사이트" />
+  <link rel="icon" type="image/svg+xml" href="/images/rebehayan.png">
   <title>SearchMovies</title>
   <meta property="og:type" content="responsive, web, mobile" />
   <meta property="og:site_name" content="SearchMovies" />
@@ -22,6 +23,7 @@
   <main>
     <ul class="my-fav-list search-result"></ul>
   </main>
+  <footer class="footer"></footer>
 </body>
 
 </html>
