--- a/pages/search.html
+++ b/pages/search.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="검색결과" />
+  <link rel="icon" type="image/svg+xml" href="/images/rebehayan.png">
   <title>검색결과</title>
   <meta property="og:type" content="페이지유형" />
   <meta property="og:site_name" content="사이트의 이름" />
@@ -28,9 +29,8 @@
     <button class="btn-prev" aria-label="이전으로"></button>
     <ul class="search-result"></ul>
   </main>
-  <footer class="footer">
-    @2025 Rebehayan.com All Right Reserves
-  </footer>
+  <footer class="footer"></footer>
+
 </body>
 
 </html>
