--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="영화검색사이트트" />
+  <link rel="icon" type="image/svg+xml" href="/images/rebehayan.png">
   <title>SearchMovies</title>
   <meta property="og:type" content="responsive, web, mobile" />
   <meta property="og:site_name" content="SearchMovies" />
@@ -26,6 +27,7 @@
       <div class="pagination"></div>
     </div>
   </main>
+  <footer class="footer"></footer>
 </body>
 
 </html>
